--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,6 @@
+
 .App {
-  
-}
-
-.App-logo {
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
   background-color: #F5F5FB;
+  height: 800px;
+  padding-top: 40px;
 }
